--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -4,4 +4,6 @@
 
 	--primary-color: #17f717;
 	--secondary-color: #04ff04;
+	--inverted-primary-color: #0232c2;
+	--inverted-secondary-color: #0d59ff;
 }
