--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -3,5 +3,7 @@
 	--inverted-bg-color: #0b0b64;
 
 	--primary-color: #0232c2;
-	--secondary-color: #0449e0;
+	--secondary-color: #0d59ff;
+	--inverted-primary-color: #17f717;
+	--inverted-secondary-color: #04ff04;
 }
