widgets/LangSwitcher - create LangSwitcher + styles - add translations for LangSwitcher - add to Sidebar + styles

--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -17,4 +17,11 @@
 	width: 100%;
 	display: flex;
 	justify-content: center;
+	flex-wrap: wrap;
+}
+
+.lang {
+	margin-top: 10px;
+	margin-left: 20px;
+	margin-right: 20px;
 }
