--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,10 +1,17 @@
 .button {
   cursor: pointer;
-  color: var(--inverted-primary-color);
+  color: var(--primary-color);
 }
 
 .clear {
   border: none;
   background: none;
   outline: none;
+}
+
+.outline {
+  padding: 10px 15px;
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
+  background: none;
 }
