--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -6,10 +6,6 @@
   transition: width 0.3s;
 }
 
-.collapsed {
-  width: var(--sidebar-width-collapsed);
-}
-
 .switchers {
   position: absolute;
   bottom: 20px;
@@ -29,4 +25,42 @@
   position: absolute;
   right: -32px;
   bottom: 32px;
+}
+
+.items {
+  margin-top: 20px;
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.item {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.icon {
+  margin-right: 10px;
+  fill: var(--inverted-primary-color);
+}
+
+.item__text {
+  white-space: nowrap;
+  opacity: 1;
+  margin-left: 0;
+  transition: 0.3s margin-left, 0.5s opacity;
+}
+
+.collapsed {
+  width: var(--sidebar-width-collapsed);
+
+  .item__text {
+    margin-left: -60px;
+    width: 0;
+    height: 24px;
+    opacity: 0;
+    transition: 0.2s opacity, 0.5s margin-left;
+  }
 }
