upgrade icon for widget/ThemeSwitcher: - add themes (Classic and inverted colors) - icon color from css variables - update stories (turn on inverted icon)

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -5,4 +5,6 @@
   --secondary-color: #04ff04;
   --inverted-primary-color: #0232c2;
   --inverted-secondary-color: #0d59ff;
+  --icon-color: #0115c6;
+  --inverted-icon-color: #ffc700;
 }
