--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -5,4 +5,6 @@
   --secondary-color: #0d59ff;
   --inverted-primary-color: #17f717;
   --inverted-secondary-color: #04ff04;
+  --icon-color: #ffc700;
+  --inverted-icon-color: #0115c6;
 }
