--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -4,7 +4,6 @@
   opacity: 0;
   z-index: -1;
   pointer-events: none;
-  transition: 0.3s all;
 
   .overlay {
     width: 100%;
@@ -18,8 +17,6 @@
       padding: 20px;
       border-radius: 12px;
       background: var(--bg-color);
-      transform: scale(0.5);
-      transition: 0.3s all;
       max-width: 60%;
 
       // box-shadow: rgba(2, 37, 194, 0.555) 0px 7px 29px 0px; //TODO: add cool one, later
@@ -31,8 +28,74 @@
     opacity: 1;
     z-index: var(--modal-z-index);
 
-    .content {
-      transform: scale(1);
+    .overlay {
+      animation-name: open-overlay;
+      animation-duration: 0.8s;
+      animation-iteration-count: 1;
+      animation-fill-mode: forwards;
     }
+
+    .content {
+      animation-name: open-content;
+      animation-duration: 0.7s;
+      animation-iteration-count: 1;
+      animation-fill-mode: forwards;
+    }
+  }
+
+  &.closing {
+    .overlay {
+      animation-name: close-overlay;
+      animation-duration: 0.8s;
+      animation-iteration-count: 1;
+      animation-fill-mode: forwards;
+    }
+
+    .content {
+      animation-name: close-content;
+      animation-duration: 0.7s;
+      animation-iteration-count: 1;
+      animation-fill-mode: forwards;
+    }
+  }
+}
+
+@keyframes open-content {
+  0% {
+    transform: scale(0);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes open-overlay {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes close-content {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(0);
+  }
+}
+
+@keyframes close-overlay {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
   }
 }
