--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -14,6 +14,7 @@
   --navbar-height: 50px;
   --sidebar-width: 300px;
   --sidebar-width-collapsed: 80px;
+  --size-bezel: 0.5rem;
 
   // z-indexes
   --modal-z-index: 10;
